<resources>
    <string name="app_name">HaritMart</string>
    <string name="facebook_app_id">707948156420847</string>
    <string name="fb_login_protocol_scheme">fb707948156420847</string>
    <string name="fb_login_app_id">966813763787443</string>
    <string name="fb_login_app_id_schema">fb966813763787443</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="productListing">Product Listing</string>
    <string name="internetMessage">No internet connection</string>
    <string name="summary">Summary</string>
    <string name="subTotal">Sub Total</string>
    <string name="shippingCharges">Shipping Charges</string>
    <string name="discount">Discount</string>
    <string name="shippingInsurance">Shipping Insurance</string>
    <string name="grandTotal">Grand Total</string>
    <string name="continueShopping">Continue Shopping</string>
    <string name="processToPay">Process To Pay</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>

    <string name="orderPlaced">Order placed !</string>
    <string name="orderMessage">Your order placed successfully. For more details, check All My Order pages under profile tab </string>


</resources>